Fix long QR codes in modals being cut off

--- a/assets/css/site/_modal.scss
+++ b/assets/css/site/_modal.scss
@@ -32,6 +32,8 @@
 	padding: 4em 2em 2em;
 	border-radius: 6px;
 	box-shadow: 0 5px 15px rgba(0,0,0,.5);
+	max-height: 95vh;
+	overflow: scroll;
 }
 .modal_buttons{
 	display: none;
